# valve-pak-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pull_request.yml  release.yml
benches/: lib.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/search.desc/valve_pak/: valve_pak-desc-0-.js
docs/src/valve_pak/: file.rs.html  lib.rs.html  utils.rs.html  vpk.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/cmp/: trait.PartialEq.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
docs/trait.impl/std/io/: trait.Read.js  trait.Seek.js
docs/valve_pak/: all.html  fn.from_directory.html  fn.open.html  index.html  sidebar-items.js
docs/valve_pak/file/: index.html  sidebar-items.js  struct.FileMetadata.html  struct.VPKFile.html
docs/valve_pak/utils/: constant.EMBEDDED_ARCHIVE_INDEX.html  constant.METADATA_SUFFIX.html  constant.VPK_SIGNATURE.html  fn.cstring_length.html  fn.join_filename.html  fn.normalize_path.html  fn.read_cstring.html  fn.read_cstring_buffered.html  fn.read_exact_vec.html  fn.split_filename.html  fn.write_cstring.html  index.html  sidebar-items.js
docs/valve_pak/vpk/: enum.VPKVersion.html  index.html  sidebar-items.js  struct.VPK.html  struct.VPKChecksums.html  struct.VPKHeader.html
examples/: basic_usage.rs
src/: file.rs  lib.rs  main.rs  utils.rs  vpk.rs
tests/: lib.rs
(+2 files in other folders)
