[package]
name = "valve_pak"
version = "0.1.0"
authors = ["Vladyslav Halatskyi <xfloydya@gmail.com>"]
description = "A library and CLI tool for reading and writing Valve Pak files"
license = "MIT"
edition = "2024"
repository = "https://github.com/floydya/valve-pak-rs"
homepage = "https://github.com/floydya/valve-pak-rs"
documentation = "https://docs.rs/valve-pak-rs"
readme = "README.md"
keywords = ["vpk", "valve", "pak", "steam", "gaming"]
categories = ["compression", "filesystem", "game-development"]
exclude = [
    ".github/*",
    "target/*",
    "*.vpk",
    "test_data/*",
]

[[bin]]
name = "valve_pak"
path = "src/main.rs"

[lib]
name = "valve_pak"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
md5 = "0.7"
crc32fast = "1.3"
walkdir = "2.3"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
fastrand = "2.3.0"
tempfile = "3.0"

[[bench]]
name = "lib"
harness = false
